--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "method-override": "^3.0.0",
         "pg": "^8.5.1",
         "supertest": "^7.0.0",
+        "update": "^0.7.4",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
